RESOLVED FIXED47292
[chromium] Thumbnail generation asserts on zero alpha values.
https://bugs.webkit.org/show_bug.cgi?id=47292
Summary [chromium] Thumbnail generation asserts on zero alpha values.
Vincent Scheib
Reported 2010-10-06 12:15:32 PDT
[chromium] Thumbnail generation asserts on zero alpha values.
Attachments
Patch (2.18 KB, patch)
2010-10-06 13:09 PDT, Vincent Scheib
no flags
Patch (2.24 KB, patch)
2010-10-06 13:53 PDT, Vincent Scheib
no flags
Vincent Scheib
Comment 1 2010-10-06 13:09:51 PDT
Vangelis Kokkevis
Comment 2 2010-10-06 13:26:21 PDT
Comment on attachment 69982 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=69982&action=review Otherwise, I agree with the proposed fix. > WebCore/platform/graphics/chromium/LayerRendererChromium.cpp:288 > + // Alpha channel on Windows is incorrect when Skia uses ClearType, don't write alpha: I found the comment confusing. Did you mean to punctuate differently? How about: Alpha channels on windows is incorrect when rendering text with ClearType. Mask off alpha to maintain proper premultiplied color values in the backbuffer. or something like that?
Kenneth Russell
Comment 3 2010-10-06 13:44:28 PDT
Comment on attachment 69982 [details] Patch r- to address Vangelis's comments.
Vincent Scheib
Comment 4 2010-10-06 13:53:19 PDT
Kenneth Russell
Comment 5 2010-10-06 13:57:45 PDT
Comment on attachment 69985 [details] Patch OK.
WebKit Commit Bot
Comment 6 2010-10-06 18:26:33 PDT
Comment on attachment 69985 [details] Patch Clearing flags on attachment: 69985 Committed r69266: <http://trac.webkit.org/changeset/69266>
WebKit Commit Bot
Comment 7 2010-10-06 18:26:37 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.