2010-10-06  Vincent Scheib  <scheib@chromium.org>

Reviewed by Kenneth Russell.

        [chromium] Thumbnail generation asserts on zero alpha values.
        https://bugs.webkit.org/show_bug.cgi?id=47292

        Test: Tested manually by running debug mode, and analyzing in PIX.

        * platform/graphics/chromium/LayerRendererChromium.cpp:
        (WebCore::LayerRendererChromium::drawLayers):

Canonical link: https://commits.webkit.org/59868@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69266 268f45cc-cd09-0410-ab3c-d52691b4dbfc